// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deserialize html break tag 1`] = `
Object {
  "break": true,
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "type": "paragraph",
}
`;

exports[`deserialize html break tag with content in single string 1`] = `
Object {
  "break": true,
  "children": Array [
    Object {
      "text": "**hi**",
    },
  ],
  "type": "paragraph",
}
`;

exports[`deserialize unknown html 1`] = `
Object {
  "children": Array [
    Object {
      "text": "",
    },
  ],
  "type": "paragraph",
}
`;
